[gd_scene load_steps=5 format=3 uid="uid://vyo6h6rte1xu"]

[ext_resource type="Script" uid="uid://dwohiu6xowsay" path="res://scenes/gui/gui.gd" id="1_efmwq"]
[ext_resource type="PackedScene" uid="uid://cy1ncg05prhjg" path="res://scenes/gui/upgrades_menu.tscn" id="2_mfius"]
[ext_resource type="PackedScene" uid="uid://dax2setb5yc3n" path="res://scenes/gui/help.tscn" id="3_0jpgx"]

[sub_resource type="ButtonGroup" id="ButtonGroup_lbhrr"]
resource_local_to_scene = false

[node name="Gui" type="CanvasLayer"]
script = ExtResource("1_efmwq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Select"

[node name="TrackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Track"

[node name="OneWayTrackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "One way track"

[node name="StationButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Station"

[node name="TrainButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Train"

[node name="LightButton" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Light"

[node name="DestroyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_lbhrr")
text = "Destroy"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Money" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "$0"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="UpgradesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Upgrades"

[node name="HelpButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Help"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Save"

[node name="SelectionDescription" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Description
Second line"

[node name="FollowTrainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "Follow Train"

[node name="Help" parent="." instance=ExtResource("3_0jpgx")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -297.0
offset_right = 225.0
offset_bottom = 193.0

[node name="UpgradesMenu" parent="." instance=ExtResource("2_mfius")]
visible = false
offset_left = 86.0
offset_top = 61.0
offset_right = -76.0
offset_bottom = -165.0

[connection signal="toggled" from="VBoxContainer/HBoxContainer/UpgradesButton" to="." method="_on_upgrades_button_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/HelpButton" to="." method="_on_help_button_toggled"]
